# poetry_to_uv

./: .gitignore  README.md  Taskfile.yml  poetry_to_uv.py  pyproject.toml  test_poetry_to_uv.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  test_code.yml
tests/: conftest.py  test_poetry_to_uv.py
tests/files/: poetry_pyproject.toml  tools_new.toml  tools_org.toml  uv_pyproject.toml
